[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0357

[node name="Player" type="Area2D"]
position = Vector2( 50, 50 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.833374, 0.833313 )
scale = Vector2( 0.039881, 0.041469 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FiringPositions" type="Node2D" parent="."]
position = Vector2( 0, -29 )

[node name="left" type="Node2D" parent="FiringPositions"]
position = Vector2( -13, 0 )

[node name="right" type="Node2D" parent="FiringPositions"]
position = Vector2( 12, 0 )

[node name="FireDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
